nav bar, working markdown translation and styles

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2248,9 +2248,10 @@ table {
   background-color: transparent;
 }
 caption {
+  font-style: italic;
+  color: var(--black);
   padding-top: 8px;
   padding-bottom: 8px;
-  color: #777777;
   text-align: left;
 }
 th {
