--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2260,7 +2260,7 @@ th {
 .table {
   width: 100%;
   max-width: 100%;
-  margin-bottom: 20px;
+  padding: 15px;
 }
 .table > thead > tr > th,
 .table > tbody > tr > th,
