--- a/css/home.css
+++ b/css/home.css
@@ -115,7 +115,7 @@ p {
     position: fixed;
     height: 75px;
     width: 100%;
-    background-color: var(--white);
+    background-color: var(--black);
 }
 
 .headerLogoContainer {
@@ -140,11 +140,45 @@ p {
 
 ---------------------------------------------*/
 
-.introDescription {
-    float: right;
-    margin: auto;
-    width: 75%;
+.firstHeader {
+    display: block;
+    float: left;
+    height: 50%;
+    min-height: 350px;
+    width: 100%;
+    padding-top: 12%;
+    padding-bottom: 12%;
+    background-image: url("/img/hero-image.png");
+    box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
 }
+
+@media only screen and (max-width: 576px){
+    .firstHeader {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+}
+
+.introDescription {
+    float: center;
+    margin: auto;
+    width: 65%;
+    min-width: 350px;
+}
+
+.introDescription p, .introDescription h1 {
+    color: white;
+    opacity: 1;
+}
+
+.introDescription a {
+    color: var(--lightbluegrey);
+}
+
+.introDescription a:hover {
+    color: white;
+}
+
 .navigationSection {
     top: 0px;
     right: 0px;
@@ -207,13 +241,13 @@ th {
     margin-right: 15px;
 
     font-size: 50px;
-    color: var(--darkblue);
+    color: var(--blue);
     float: right;
     cursor: pointer;
 }
 
 #iconForSkip:hover {
-    color: var(--lightbluegrey);
+    color: var(--white);
 }
 #contentOfSkip {
     display: none;
@@ -225,7 +259,7 @@ th {
 
 .skipItem {
     font-size: 22px;
-    color: var(--darkblue);
+    color: var(--lightbluegrey);
     margin: 0px;
 }
 
@@ -240,7 +274,7 @@ tr {
 th {
     text-align: right;
     padding: 15px;
-    background-color: var(--white);
+    background-color: var(--black);
 }
 
 th:hover {
@@ -258,7 +292,7 @@ th:hover {
         width: 100%;
         height: 100%;
         color: var(--white);
-        background-color: var(--white);
+        background-color: var(--black);
     }
     .colContainsContent {
         padding-top: 0px;
@@ -288,7 +322,7 @@ th:hover {
 ---------------------------------------------*/
 
 .body {
-    padding-top: 90px;
+    padding-top: 75px;
 }
 
 /*------------------------------------------ 
@@ -391,12 +425,6 @@ th:hover {
             HEADERS AND SECTIONS
 
 ---------------------------------------------*/
-
-.firstHeader {
-    display: block;
-    float: left;
-    width: 100%;
-}
 
 .everyOtherSection {
     background-color: var(--lightbluegrey);
