--- a/css/shop-item.css
+++ b/css/shop-item.css
@@ -138,7 +138,7 @@ figcaption.svCaption {
   text-align: center;
   /* font-family: times; */
   font-style: italic;
-  /* font-size: smaller; */
+  font-size: smaller;
   text-indent: 0;
   margin-bottom: 20px; }
 
