--- a/css/documentation.css
+++ b/css/documentation.css
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6, p {
     color: var(--verydarkblue);
 } */
 
-span {
+span:has(zero-md) {
     height: fit-content;
     display: block;
 }
