--- a/css/home.css
+++ b/css/home.css
@@ -148,7 +148,7 @@ p {
     width: 100%;
     padding-top: 12%;
     padding-bottom: 12%;
-    background-image: url("/img/hero-image.png");
+    background-image: url("/img/hero_image.png");
     box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
 }
 
