reorganize landing page and styling

--- a/css/standards.css
+++ b/css/standards.css
@@ -11,6 +11,7 @@
     --red: #a62224;
     --peachy: #f37977;
     --lightpink: #ec939c;
+    --lighterpink: #ec939cb4;
     --white: #e6ebee;
     --grey: grey;
     --lightgrey: lightgrey;
