--- a/css/home.css
+++ b/css/home.css
@@ -11,11 +11,20 @@ body {
     background-color: var(--white);
 }
 
+::selection {
+    background: var(--lighterpink); /* WebKit/Blink Browsers */
+}
+
+::-moz-selection {
+    background: var(--lighterpink); /* Gecko Browsers */
+}
+
 html {
     width: 100%;
     height: auto;
     overflow-x: hidden;
-    /* scroll-padding-top: 65px; */
+    scroll-behavior: smooth;
+    scroll-padding-top: 114px;
 }
 
 /*------------------------------------------ 
@@ -76,6 +85,10 @@ p {
     padding: 15px;
     display: block;
     font-size: 25px;
+}
+
+.downloadLinks {
+    text-align: center;
 }
 
 @media only screen and (max-width: 768px) {
@@ -257,7 +270,7 @@ table {
     position: fixed;
     right: 0px;
     height: 75%;
-    width: 250px;
+    width: 275px;
 }
 .tbody {
     width: 100%;
@@ -308,7 +321,7 @@ th {
 
 .skipItem {
     font-size: 22px;
-    color: var(--lightbluegrey);
+    color: var(--white);
     margin: 0px;
 }
 
@@ -327,7 +340,7 @@ th {
 }
 
 th:hover {
-    background-color: var(--lightbluegrey);
+    background-color: white;
 }
 
 @media only screen and (max-width: 767px){
@@ -340,7 +353,7 @@ th:hover {
         padding: 70px 20px;
         width: 100%;
         height: 9999px;
-        color: var(--white);
+        color: white;
         background-color: var(--black);
     }
     .colContainsContent {
@@ -685,7 +698,7 @@ th:hover {
 
 .checklist li {
     text-align: left;
-    line-height: 2em;
+    line-height: 1.75em;
     font-size: 20px;
     padding-left: 15px;
 }
@@ -694,7 +707,8 @@ th:hover {
     font-weight: bold;
     font-size: 22px;
     padding-left: 0px;
-    text-align: center;
+    line-height: 1.25em;
+    padding-bottom: 5px;
 }
 
 .fa-check {
@@ -756,6 +770,21 @@ th:hover {
 
 .docHeader, .docSection {
     padding: 15px;
+}
+
+/*------------------------------------------ 
+
+            SUPPORT SECTION
+
+---------------------------------------------*/
+.supportContainer {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.supportDescription {
+    font-size: 25px;
+    
 }
 
 /*------------------------------------------ 
