--- a/css/home.css
+++ b/css/home.css
@@ -218,6 +218,13 @@ p {
     box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
 }
 
+@media only screen and (min-width: 1000px) {
+    .firstHeader {
+        padding-top: 10%;
+        padding-bottom: 10%;
+    }  
+}
+
 @media only screen and (max-width: 576px){
     .firstHeader {
         padding-top: 16%;
