--- a/css/home.css
+++ b/css/home.css
@@ -200,7 +200,7 @@ p {
     box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 20%);
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1300px) {
     .firstHeader {
         padding-top: 10%;
         padding-bottom: 10%;
@@ -209,8 +209,12 @@ p {
 
 @media only screen and (max-width: 576px){
     .firstHeader {
-        padding-top: 16%;
-        padding-bottom: 16%;
+        padding-top: 25%;
+        padding-bottom: 25%;
+    }
+
+    .hero_title {
+        font-size: 8vw;
     }
 }
 
@@ -574,9 +578,9 @@ th:hover {
     padding-left: 15px;
     padding-right: 7.5;
     padding-bottom: 15px;
-    /* margin-left: 12.5%;
-    margin-right: 12.5%;
-    width: 75%; */
+    margin-left: 17.5%;
+    margin-right: 17.5%;
+    width: 65%;
     position: relative;
   }
   
