--- a/css/standards.css
+++ b/css/standards.css
@@ -15,6 +15,7 @@
     --white: #e6ebee;
     --grey: grey;
     --lightgrey: lightgrey;
+    --lightergrey: rgb(237, 237, 237);
     --lightblue: lightblue;
 
 }
