--- a/css/home.css
+++ b/css/home.css
@@ -540,7 +540,7 @@ th:hover {
     color: var(--black);
 }
 
-.img_Gallery {
+.img_Gallery, .aniHolder {
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -580,15 +580,11 @@ th:hover {
 
 ---------------------------------------------*/
 
-#slideshow-container {
+.slideshow-container {
     display: block;
     float: left;
-    padding-left: 15px;
-    padding-right: 7.5;
     padding-bottom: 15px;
-    margin-left: 17.5%;
-    margin-right: 17.5%;
-    width: 65%;
+    width: 100%;
     position: relative;
   }
   
@@ -624,7 +620,7 @@ th:hover {
   }
   
   /* Caption Info */
-  .Info {
+  .caption {
     color: var(--white);
     font-size: 16px;
     padding: 10px 14px;
