--- a/css/home.css
+++ b/css/home.css
@@ -704,6 +704,11 @@ th:hover {
     line-height: 1.75em;
     font-size: 20px;
     padding-left: 15px;
+    padding-bottom: 12px;
+}
+
+.checklist .indented {
+    padding-left: 45px;
 }
 
 .checklist li.capabilitiesHeader {
