--- a/css/home.css
+++ b/css/home.css
@@ -588,10 +588,18 @@ th:hover {
     display: block;
     float: left;
     padding-bottom: 15px;
-    width: 75%;
-    margin-right: 12.5%;
-    margin-left: 12.5%;
+    width: 65%;
+    margin-right: 17.5%;
+    margin-left: 17.5%;
     position: relative;
+  }
+
+  @media only screen and (max-width: 767px) {
+    .slideshow-container {
+        width: 75%;
+        margin-right: 12.5%;
+        margin-left: 12.5%;
+    }
   }
   
   /* Make the images invisible by default */
