--- a/css/documentation.css
+++ b/css/documentation.css
@@ -112,6 +112,14 @@ h1, h2, h3, h4, h5, h6, p {
     z-index: 20;
 }
 
+.topRightBars {
+    height: 55px;
+    top: 10px;
+    right: 10px;
+    position: fixed;
+    z-index: 20;
+}
+
 .header {
     top: 0;
     display: block;
@@ -323,12 +331,21 @@ zero-md {
     cursor: pointer;
 }
 
-.navTitle, .navSubLink {
-    padding: 15px;
+.navLink p {
+    margin: 0;
+    padding: 0;
     color: white;
+    font-size: 18px
 }
 
-.navTitle {
+.navTitle, .navSubLink, .navLink {
+    padding: 15px;
+    color: white;
+    background-color: var(--black);
+    cursor: pointer;
+}
+
+.navTitle, .navLink {
     font-weight: bold;
 }
 
@@ -343,11 +360,11 @@ zero-md {
     font-size: 18px;
 }
 
-.navTitle:hover, .navSubLink:hover {
+.navTitle:hover, .navSubLink:hover, .navLink:hover {
     background-color: white;
     color: var(--black);
 }
 
-.navSubLink p:hover, .navSubLink:hover p {
+.navSubLink p:hover, .navSubLink:hover p, .navLink:hover p {
     color: var(--black);
 }
