--- a/css/home.css
+++ b/css/home.css
@@ -482,9 +482,10 @@ th:hover {
     }
 }
 
-.paddingIntro {
-    padding-right: 25px;
-    padding-left: 25px;
+.gatewayText {
+    padding-right: 15px;
+    padding-left: 15px;
+    text-align: justify;
 }
 
 /*------------------------------------------ 
@@ -492,16 +493,17 @@ th:hover {
             HEADERS AND SECTIONS
 
 ---------------------------------------------*/
-
-.everyOtherSection {
-    background-color: var(--lightbluegrey);
+.section, .everyOtherSection {
     height: fit-content;
     width: 100%;
     display: block;
     float: left;
-    padding: 15px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px; 
+}
+
+.everyOtherSection {
+    background-color: var(--lightbluegrey);
 }
 
 .newSectionHeader {
@@ -512,18 +514,17 @@ th:hover {
     color: var(--black);
 }
 
-.subHeader {
-    display: block;
-    float: left;
-    margin-top: 15px;
-    width: 100%;
-    height: 100%;
-}
-
 .newSectionContent {
     display: block;
     float: left;
     width: 100%;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+.removePadding {
+    padding-left: 0;
+    padding-right: 0;
 }
 
 /*------------------------------------------ 
@@ -832,16 +833,23 @@ th:hover {
 
 ---------------------------------------------*/
 
-.embedVMR {
-    height: 550px;
+.subHeader {
+    margin-top: 15px;
+}
+
+#embedVMR {
+  border: 5px solid var(--lightgrey)  
+}
+
+.embedVMRcontainer {
+    min-height: 400px;
     float: right;
     display: block;
-    padding: 25px;
+    padding-bottom: 35px;
 }
 
 .describeVMR {
     display: block;
-    padding: 25px;
 }
 
 @media (min-width: 768px){
@@ -978,6 +986,8 @@ th:hover {
 }
 
 .team-container {
+    display: block;
+    float: left;
     width: 100%;
     padding-right: 25px;
     padding-left: 25px;
@@ -1033,7 +1043,7 @@ th:hover {
 
 @media only screen and (max-width: 768px) {
     h1 {
-        font-size: 30px;
+        font-size: 6vw;
     }
     .contactLinks, .contactDescription{
         text-align: left;
