--- a/css/home.css
+++ b/css/home.css
@@ -851,10 +851,8 @@ th:hover {
 }
 
 .embedVMRcontainer {
-    min-height: 550px;
     float: right;
     display: block;
-    padding-bottom: 35px;
     padding-left: 35px;
 }
 
@@ -868,9 +866,13 @@ th:hover {
     }
 }
 
-@media (max-width: 768px){
+@media (max-width: 992px){
     .embedVMRcontainer {
         padding-left: 15px;
+        height: 550px;
+    }
+    .describeVMR {
+        padding-bottom: 30px;
     }
 }
 
